--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -120,13 +120,12 @@
                        <p>Tiny Atlas Creative offers travel and lifestyle photography, video and editorial story content for an array of media and marketing platforms. We can also help brands reach influencers, extend their awareness and increase engagement via our social media channels, events, and other platforms.</p>
                        <p>Tiny Atlas Quarterly Magazine is an extension of our collaborative work as professionals, created on a very personal level. It’s where we share all the places we love to travel ourselves, as well as how we see our own backyards. Think of it as the after party, once the commercial shoot wraps and, handily, the little black book of where to go and what to do if you find yourself there one day, too.</p>
                        <h3>Contact</h3>
-                       <p>tinyatlasquarterly.com<br/>
-                          Instagram @tinyatlasquarterly #mytinyatlas<br />
-                          twitter @tinyatlasqtrly</p>
-                       <p>Questions: info@tinyatlasquarterly.com <br />
+                       <p><a href="https://www.instagram.com/tinyatlasquarterly/">Instagram @tinyatlasquarterly</a><a href="https://www.instagram.com/explore/tags/mytinyatlas/"> #mytinyatlas</a><br />
+                          <a href="https://twitter.com/TinyAtlasQtrly">twitter @tinyatlasqtrly</a></p>
+                       <p>Questions: <a href="mailto:info@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">info@tinyatlasquarterly.com</a> <br />
                           Press Inquries 	&amp; Ad Sales: <a href="mailto:jill@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">
                        Jill Hudes Lindenbaum</a><br />
-                       <a href="http://tinyatlasquarterly.com/about/stockists.html">Stockists</a>
+                       <a href="stockists.html">Stockists</a>
                        </p>
                        </div>
                   </div><!--END INTERVIEW -->
