--- a/new-site/index.html
+++ b/new-site/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" type="text/css" href="css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="css/homepage.css" />
     <link rel="stylesheet" type="text/css" href="css/header.css" />
+    <link rel="stylesheet" type="text/css" href="css/socialbuttons.css" />
+    <link rel="stylesheet" type="text/css" href="css/social_btns.css" />
+
 
 
 
@@ -157,9 +160,22 @@
         </div>
 
         <div class="section">
+          <div class="section-shop">
+            <img src="images/solas-image-1.jpg" alt="">
+            <div class="shop-info">
+              <span>SHOP TINY ATLAS</span>
+              <h3>Solas Camera Bag</h3>
+              <p>A lightweight, versatile and durable camera bag Tiny Atlas Quarterly + Alite Designs made just for you.</p>
+              <a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders"><button>Preorder</button></a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="section">
           <div class="description">
               <h2>Instagram</h2>
-              <p>#mytinyatlas</p>
+              <p><a href="https://www.instagram.com/tinyatlasquarterly/">@tinyatlasquarterly</a> / <a href="https://www.instagram.com/explore/tags/mytinyatlas/">#mytinyatlas</a></p>
           </div>
           <div id="instafeed"class="">
 
@@ -205,6 +221,43 @@
 
           </div>
         </div>
+
+
+            <!--- START FOOTER -->
+            <footer id="bottom-nav" class="fade">
+
+            	<div id="social-share" style="margin: 1em 0 0 0;position:relative;">
+        		  <div id="social-labels">
+        				<div id="share-label">SHARE</div>
+        				<div id="newsletter-label" style="font-size:0.8em;display:block; float: left; width: 50%; text-align: right;"><span>SUBSCRIBE</span></div>
+        				<div style="clear: both; height: 1px;"></div>
+        		  </div>
+        			<ul id="share-menu">
+        				<li><a href="http://www.facebook.com/sharer.php?u=http://tinyatlasquarterly.com/" onclick="centeredPopup(this.href,'Share Tiny Atlas','500','300','yes');return false" class="facebook">Facebook</a></li>
+        				<li><a href="javascript:void((function()%7Bvar%20e=document.createElement(&apos;script&apos;);e.setAttribute(&apos;type&apos;,&apos;text/javascript&apos;);e.setAttribute(&apos;charset&apos;,&apos;UTF-8&apos;);e.setAttribute(&apos;src&apos;,&apos;http://assets.pinterest.com/js/pinmarklet.js?r=&apos;+Math.random()*99999999);document.body.appendChild(e)%7D)());" class="pinterest">Pinterest</a></li>
+        				<li><a href="http://twitter.com/share?text=%40TinyAtlasQuarterly%20is%20a%20fresh%20travel%20experience,%20a%20production%20resource%20and%20feast for%20your%20eyes.%20Go%20there%20now!&url=http://tinyatlasquarterly.com/" onclick="centeredPopup(this.href,'Share Tiny Atlas','500','300','yes');return false" class="twitter">Twitter</a></li>
+        				<li><a href="https://plus.google.com/share?url=http://tinyatlasquarterly.com/" onclick="javascript:window.open(this.href,
+        				'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="google">Google+</a></li>
+        				<li><a href="http://instagram.com/tinyatlasquarterly" target="_blank" class="instagram">Instagram</a></li>
+        				<li><a href="#" class="newsletter"></a></li>
+        			</ul>
+
+                  <!-- SUBSCRIBE FORM -->
+        		  <div id="newsletter-form">
+        				<div class="newsletter-header">
+        					 <div class="title">Subscribe to our mailing list</div>
+        					 <div class="newsletter-close"><img class="close" src="images/subscribe/subscribe-dialog-close.gif" alt="" /></div>
+        					 <div style="clear: both; height: 1px" /></div>
+        				<span></span>
+
+                        <form method="post" action="subscribe.php">
+        					 <div class="newsletter-field"><input type="text" id="subscribe-email" name="email" placeholder="email address" ></div>
+        					 <a class="newsletter-submit" href="#"></a>
+        					 <div style="clear: both; height: 1px" />
+        				</form>
+        		  </div>
+            </footer>
+            <!--- END FOOTER -->
 
     </div>
 
