--- a/new-site/index.html
+++ b/new-site/index.html
@@ -131,6 +131,7 @@
         <div class="section">
             <div class="trips">
                 <div class="description">
+                    <img src="images/trips-logo.png" alt="trips logo" class="logo">
                     <h2>TAQ Trips</h2>
                     <p>Tiny Atlas Trips bring our stories to life in real time on incredible excursions across the globe. Produced in collaboration with adventure sports company, Earth Missions and analog creativity specialists Allswell, Tiny Atlas Trips
                         are created for the public as well as influencers and can be customized for brands.</p>
@@ -161,10 +162,10 @@
 
         <div class="section">
           <div class="section-shop">
-            <img src="images/solas-image-1.jpg" alt="">
+            <img src="images/solas-image-1.jpg" alt="Solas Bag Image">
             <div class="shop-info">
-              <span>SHOP TINY ATLAS</span>
-              <h3>Solas Camera Bag</h3>
+              <img src="images/solas-logo.png" alt="Solas Logo" class="logo">
+              <h3>A casual camera bag for  photographers</h3>
               <p>A lightweight, versatile and durable camera bag Tiny Atlas Quarterly + Alite Designs made just for you.</p>
               <a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders"><button>Preorder</button></a>
             </div>
