--- a/new-site/index.html
+++ b/new-site/index.html
@@ -132,7 +132,7 @@
             <div class="trips">
                 <div class="description">
                     <img src="images/trips-logo.png" alt="trips logo" class="logo">
-                    <h2>TAQ Trips</h2>
+                    <h2>TINY ATLAS TRIPS</h2>
                     <p>Tiny Atlas Trips bring our stories to life in real time on incredible excursions across the globe. Produced in collaboration with adventure sports company, Earth Missions and analog creativity specialists Allswell, Tiny Atlas Trips
                         are created for the public as well as influencers and can be customized for brands.</p>
                 </div>
@@ -162,7 +162,7 @@
 
         <div class="section">
           <div class="section-shop">
-            <img src="images/solas-image-1.jpg" alt="Solas Bag Image">
+            <img src="images/solas-image-1.png" alt="Solas Bag Image">
             <div class="shop-info">
               <img src="images/solas-logo.png" alt="Solas Logo" class="logo">
               <h3>A casual camera bag for  photographers</h3>
