--- a/new-site/about/masthead.html
+++ b/new-site/about/masthead.html
@@ -71,16 +71,16 @@
           <a href="../index.html"><img src="../images/TAQ-logo.png" alt="" class="logo"></a>
       </div>
       <div class="header-links-container">
-          <span class="header-links list-triangle"><a href="events/solas/index.html">Events</a>
+          <span class="header-links list-triangle"><a href="../events/solas/index.html">Events</a>
 <ul>
- <li><a href="events/solas/index.html">SOLAS</a></li>
- <li><a href="events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
- <li><a href="events/leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
- <li><a href="events/montauk/index.html">Montauk Show</a></li>
+ <li><a href="../events/solas/index.html">SOLAS</a></li>
+ <li><a href="../events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
+ <li><a href="../events/leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
+ <li><a href="../events/montauk/index.html">Montauk Show</a></li>
 </ul>
 </span>
-          <span class="header-links"><a href="about/index.html">About</a></span>
-          <span class="header-links list-triangle"><a href="about/masthead.html">Masthead</a>
+          <span class="header-links"><a href="index.html">About</a></span>
+          <span class="header-links list-triangle"><a href="masthead.html">Masthead</a>
 <ul>
  <li><a href="about/editors-letter.html">Editor's Letter</a></li>
 </ul>
