added editor's letter

--- a/new-site/about/editors-letter.html
+++ b/new-site/about/editors-letter.html
@@ -90,6 +90,7 @@
       </div>
   </div>
 
+
             <!-- PAGE NAVIGATION ------------------------------------------------------------->
 
 
@@ -107,7 +108,7 @@
                 </picture>
                 <!-- IMAGE END -->
 
-                <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light masthead">
+                <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
 
                     <!-- CAPTION -->
                     <!-- LEFT CAPTION -->
@@ -116,65 +117,14 @@
                        <!-- INTERVIW -->
                        <div id="pg-interview">
                        <div class="title-ill about-logo"><img src="images/logo-big.png" alt=""></div>
-                       <h2>masthead</h2>
-                       <p><a href="mailto:info@tinyatlasquarterly.com">info@tinyatlasquarterly.com</a><br>
-                       <a href="http://tinyatlasquarterly.com">tinyatlasquarterly.com</a><br>
-                       Instagram <a href="https://www.instagram.com/tinyatlasquarterly/">@tinyatlasquarterly</a> <a href="https://www.instagram.com/explore/tags/mytinyatlas/">#mytinyatlas</a><br>
-                       twitter <a href="https://twitter.com/TinyAtlasQtrly">@tinyatlasqtrly</a></p>
-                       <h3>FOUNDER/PUBLISHER/CREATIVE DIRECTOR</h3>
-                       <p><a href="mailto:emily@tinyatlasquarterly.com">Emily Nathan</a></p>
-                       <h3>DIRECTOR OF USER EXPERIENCE</h3>
-                       <p><a href="mailto:jake@myrobothand.com">Jake Huffman</a></p>
-                       <h3>DEVELOPER/LEAD DIGITAL DESIGNER</h3>
-                       <p><a href="https://www.alexgennette.com">Alex Gennette</a></p>
-                       <h3>BRAND CREATIVE DIRECTOR</h3>
-                       <p><a href="http://studiosloan.com">Mark Sloan</a></p>
-                       <h3>PHOTO DIRECTOR</h3>
-                       <p><a href="mailto:deb@tinyatlasquarterly.com">Deb Hearey</a></p>
-                       <h3>MANAGING EDITOR</h3>
-                       <p><a href="mailto:flora@tinyatlasquarterly.com">Flora Tsapovsky</a></p>
-                       <h3>ARTS EDITOR</h3>
-                       <p><a href="http://www.cultexhibitions.com"></a>Aimee Friberg</p>
-                       <h3>FOUNDING DESIGN DIRECTOR</h3>
-                       <p><a href="http://lionsandtigersco.com/">Liz Mullally</a></p>
-                       <h3>PRODUCTION ASSISTANTS</h3>
-                       <p>Bianca Tummings<br>
-                       Lindsey Adams<br>
-                       Nicole Elliott</p>
-                       <h3>CITY COVER ILLUSTRATION</h3>
-                       <p><a href="http://wwww.olaniepsuj.com">Ola Niepsuj</a></p>
-                       <h3>CITY COVER PHOTO</h3>
-                       <p><a href="http://www.emilynathan.com">Emily Nathan</a></p>
-                       <h3>MASTHEAD PHOTO</h3>
-                       <p><a href="http://gabrielrobertflores.tumblr.com">Gabriel Flores</a></p>
-                       <h3>ABOUT PHOTO</h3>
-                       <p><a href="http://www.emilyshur.com">Emily Shur</a></p>
-                       <h3>EDITOR'S LETTER PHOTO</h3>
-                       <p><a href="mailto:nicolefranzen@gmail.com">Nicole Franzen</a></p>
-                       <h3>CONTRIBUTING ILLUSTRATORS/DESIGNERS</h3>
-                       <p><a href="http://jimmezei.com">Jim Mezei</a><br>
-                       <a href="https://www.linkedin.com/in/sharon-matas-9a8ab04a/">Sharon Matas</a><br>
-                       <a href="http://alexhollender.info">Alex Hollender</a><br>
-                       <a href="http://www.lizgardner.co">Liz Gardner</a><br>
-                       <a href="mailto:locksin2309@gmail.com">Locksin Chong</a><br>
-                       <a href="http://studiosloan.com">Mark Sloan</a><br>
-                       <a href="http://www.lizzievaughan.com">Lizzie Vaughan</a><br>
-                       <a href="http://www.oregon-girl.com">Holly Schnackenberg</a></p>
-                       <h3>FEATURE  PHOTOGRAPHERS</h3>
-                       <p><a href="http://www.emilynathan.com">Emily Nathan</a><br>
-                       <a href="http://gabrielrobertflores.tumblr.com">Gabriel Flores</a><br>
-                       <a href="http://www.christarenee.com">Christa Renee</a><br>
-                       <a href="https://www.linkedin.com/in/liah-chesnokov-4788263/">Liah Chesnokov</a><br>
-                       <a href="http://www.emilyshur.com">Emily Shur</a><br>
-                       <a href="http://www.daejafallas.com">Daeja Fallas</a><br>
-                       <a href="http://www.erinkunkel.com">Erin Kunkel</a><br>
-                       <a href="http://www.ashleycamper.com">Ashley Camper</a></p>
-                       <h3>CONTRIBUTING WRITERS</h3>
-                       <p><a href="https://www.linkedin.com/in/francisca-rojas-043893/">Francisca Rojas</a><br>
-                       <a href="http://www.emilyknathan.com">Emily K Nathan</a><br>
-                       <a href="http://www.emilyknathan.com">Flora Tsapovsky</a></p>
-                       <h3>PRESS INQUIRIES &amp; AD SALES</h3>
-                       <p><a href="mailto:jill@tinyatlasquarterly.com">Jill Hudes Lindenbaum</a></p>
+                       <p>For our City issue, I reached out to Urban Planning Ph.d. Francisca Rojas for an introduction to the fluid, ever-changing concept of cities.</p>
+                       <p>Thank you, Emily Nathan Founder,<br /> Tiny Atlas Quarterly</p>
+
+                       <h2>From chaos to home</h2>
+                       <p>Riding on the crowded subway in Buenos Aires this week, I noticed someone's t-shirt declaring; "Istanbul: you call it chaos, I call it home." It struck me as a succinct way of expressing how, over the course of four years. my family and I have become locals in this vast metropolis of 14 million people, with the smells of buttery pastries in the morning and grilled beef in the afternoon. I was on the subway that afternoon because I needed to be in a meeting a few blocks away in a quick ten minutes. I had jumped into a taxi that immediately refused to take me to that part of town. All the streets were blocked because of massive protests. Unfazed, I saw the subway nearby, and even though I hadn't previously been on that line before, a man standing outside the station assured me that my destination was just two stops away. I made it on time. Four years ago, this same situation would have caused me great anxiety, and a very late arrival.</p>
+                       <p>What is that process that transforms you from an outsider to an insider in a city? From perceiving utter chaos to seeing home? As both academic theories and personal experience would tell you, two critical aspects are involved: observing the urban landscape and listening to the people around you. As urban planners, we learned this lesson from Jane Jacobs when, in the 1960s, she resisted Robert Moses' destruction of vibrant New York City neighborhoods by evocatively describing the ‘urban ballet’ of the local community’s ties and rhythms. Urban photographers also intuitively know that their capacity for observation and personal connections is the quality that allows them to capture the spirit of a place, what the Romans called <i>genius loci.</i></p>
+                       <p>In Buenos Aires, the locals advised me that the city's greatest beauty was behind closed doors -- in rooftop gardens, interior patios, alley cafés. They also advised me to always have a Plan B, C and D. These notions shifted my perception of what I initially saw as chaos, like the ubiquitous broken sidewalks, and opened my eyes to the unique patterns and dynamics that make Buenos Aires one of the most beloved cities in the world. You're home when your instincts take over and you know to see beyond the surface and when your eyes and ears are open to capturing the energy emanating from the people and the streets.</p>
+                       <p>Cheers from Buenos Aires,<br /> Francisca Rojas</p>
                        </div>
                   </div><!--END INTERVIEW -->
                </div> <!-- END BOX -->
