--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -71,24 +71,25 @@
           <a href="../index.html"><img src="../images/TAQ-logo.png" alt="" class="logo"></a>
       </div>
       <div class="header-links-container">
-          <span class="header-links list-triangle"><a href="../events/solas/index.html">Events</a>
-<ul>
- <li><a href="../events/solas/index.html">SOLAS</a></li>
- <li><a href="../events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
- <li><a href="../events/leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
- <li><a href="../events/montauk/index.html">Montauk Show</a></li>
-</ul>
-</span>
-          <span class="header-links"><a href="index.html">About</a></span>
-          <span class="header-links list-triangle"><a href="masthead.html">Masthead</a>
-<ul>
- <li><a href="about/editors-letter.html">Editor's Letter</a></li>
-</ul>
-</span>
-
-          <span class="header-links"><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders" target="_blank">Shop</a></span>
+        <span class="header-links list-triangle"><a href="masthead.html">Masthead</a>
+          <ul>
+            <li><a href="editors-letter.html">Editor's Letter</a></li>
+          </ul>
+        </span>
+        <span class="header-links list-triangle"><a href="../events/solas/index.html">Events</a>
+          <ul>
+           <li><a href="../events/solas/index.html">SOLAS</a></li>
+           <li><a href="../events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
+           <li><a href="../events/leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
+           <li><a href="../events/montauk/index.html">Montauk Show</a></li>
+          </ul>
+        </span>
+        <span class="header-links"><a href="index.html">About</a></span>
+        <span class="header-links"><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders" target="_blank">Shop</a>
+        </span>
       </div>
   </div>
+
 
             <!-- PAGE NAVIGATION ------------------------------------------------------------->
 
@@ -100,10 +101,10 @@
                      <!-- IMAGE START -->
                 <picture>
                   <!--[if IE 9]><video style="display: none;"><![endif]-->
-                  <source srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-L.jpg" media="(min-width: 960px)">
-                  <source srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
+                  <source srcset="images/about-2017-emily-shur-L.jpg" media="(min-width: 960px)">
+                  <source srcset="images/about-2017-emily-shur-M.jpg" media="(min-width: 768px)">
                   <!--[if IE 9]></video><![endif]-->
-                  <img srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                  <img srcset="images/about-2017-emily-shur-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
                 </picture>
                 <!-- IMAGE END -->
 
