--- a/new-site/havana/index.html
+++ b/new-site/havana/index.html
@@ -405,12 +405,12 @@
                         <p>A centrally located, family-owned restaurant serving simple and straightforward Cuban cuisine.</p>
 
                         <a href="http://www.lahabana.com/guide/museo-del-chocolate/"><h5>Museo del Chocolate</h5></a>
-                        <p>Part museum part coffee shop, the Museo serves addictive cold chocolate drinks. </p>
+                        <p>Part museum part coffee shop, the Museo serves addictive cold chocolate drinks.</p>
 
                         <h4>Stay:</h4>
 
                         <a href="http://www.casaparticular.com/"><h5>Casas Particulares</h5></a>
-                        <p>The best way to stay in Havana is rent a room in a private family house. Locals must officially to provide the service, and it’s a great way to help families financially and get a glimpse of authentic Cuban life. <a href="http://www.havanacasaparticular.com/">http://www.havanacasaparticular.com/</a></p>
+                        <p>The best way to stay in Havana is rent a room in a private family house. Locals must officially to provide the service, and it’s a great way to help families financially and get a glimpse of authentic Cuban life.<a href="http://www.havanacasaparticular.com/">http://www.havanacasaparticular.com/</a></p>
 
                         <h4>Do:</h4>
 
@@ -418,10 +418,15 @@
                         <p>An expansive museum with collections from Spain, ancient Greece and modern-day Cuba.</p>
 
                         <a href="http://www.hemingwaycuba.com/finca-la-vigia.html"><h5>Museo Hemingway Finca Vigia</h5></a>
-                        <p>An intricate glimpse into the life of Ernest Hemingway, who once adopted Cuba as his home country. </p>
+                        <p>An intricate glimpse into the life of Ernest Hemingway, who once adopted Cuba as his home country.</p>
 
                         <h5>El Malecon</h5>
-                        <p>Havana’s boardwalk stretches alongside the city, offering a gallery of faces, sounds and images</p>
+                        <p>Havana’s boardwalk stretches alongside the city, offering a gallery of faces, sounds and images.</p>
+
+                        <a href="http://www.coasttocosta.com "><h5>Coast to Coasta</h5></a>
+                        <a href="http://www.intrepidtravel.com"><h5>Intrepid Travel</h5></a>
+                        <a href="http://www.elcamino.travel"><h5>El Camino</h5></a>
+                        <p>There are some excellent options for personalized, guided small group trips to Cuba if you don’t want to figure out logistics yourself.</p>
 
                     </div>
                 </div>
