Added letter image / all white BG

--- a/new-site/about/editors-letter.html
+++ b/new-site/about/editors-letter.html
@@ -101,10 +101,11 @@
                      <!-- IMAGE START -->
                 <picture>
                   <!--[if IE 9]><video style="display: none;"><![endif]-->
-                  <source srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-L.jpg" media="(min-width: 960px)">
-                  <source srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
-                  <!--[if IE 9]></video><![endif]-->
-                  <img srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                  <source srcset="images/Editors-Letter_Nicole_Franzen_Buenos_Aires-L.jpg" media="(min-width: 960px)">
+                  <source srcset="images/Editors-Letter_Nicole_Franzen_Buenos_Aires-M.jpg" media="(min-width: 768px)">
+                  <source srcset="images/Editors-Letter_Nicole_Franzen_Buenos_Aires-V.jpg" media="(orientation: portrait)">
+                    <!--[if IE 9]></video><![endif]-->
+                  <img srcset="images/Editors-Letter_Nicole_Franzen_Buenos_Aires-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
                 </picture>
                 <!-- IMAGE END -->
 
