--- a/new-site/index.html
+++ b/new-site/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="description">
                     <p>Tiny Atlas Quarterly is a photography-led lifestyle travel brand and social community that brings personal travel to life: in our magazine, through events and products and on immersive adventures.</p>
-                    <h3>Current Issue - 2017 City</h3>
+                    <h3>CURRENT ISSUE - 2017 CITY</h3>
                 </div>
             </div>
 
