added header link

--- a/new-site/about/editors-letter.html
+++ b/new-site/about/editors-letter.html
@@ -71,9 +71,11 @@
           <a href="../index.html"><img src="../images/TAQ-logo.png" alt="" class="logo"></a>
       </div>
       <div class="header-links-container">
-        <span class="header-links list-triangle"><a href="masthead.html">Masthead</a>
+        <span class="header-links"><a href="../index.html">Home</a></span>
+        <span class="header-links list-triangle"><a href="masthead.html">Info</a>
           <ul>
             <li><a href="editors-letter.html">Editor's Letter</a></li>
+            <li><a href="masthead.html">Masthead</a></li>
           </ul>
         </span>
         <span class="header-links list-triangle"><a href="../events/solas/index.html">Events</a>
