--- a/new-site/index.html
+++ b/new-site/index.html
@@ -50,9 +50,11 @@
                 <a href="index.html"><img src="images/TAQ-logo.png" alt="" class="logo"></a>
             </div>
             <div class="header-links-container">
-              <span class="header-links list-triangle"><a href="about/masthead.html">Masthead</a>
+              <!-- <span class="header-links link-active"><a href="index.html">Current Issue</a></span> -->
+              <span class="header-links list-triangle"><a href="index.html" class="link-active">Current Issue</a>
                <ul>
                  <li><a href="about/editors-letter.html">Editor's Letter</a></li>
+                 <li><a href="about/masthead.html">Masthead</a></li>
                </ul>
              </span>
 
@@ -139,21 +141,24 @@
 
 
                 <div class="trip">
+                  <a href="#">
                   <img src="images/trip-preview-tahiti.jpg" alt=""class="trip-preview">
                     <div class="details">
                         <h3>Tahiti</h3>
                         <p>The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
                         <button>View Trip</button>
                     </div>
+                    </a>
                 </div>
 
                 <div class="trip">
-                    <img src="images/trip-preview-tofino.jpg" alt=""class="trip-preview">
+                    <a href="#"><img src="images/trip-preview-tofino.jpg" alt=""class="trip-preview">
                     <div class="details">
                         <h3>Tofino</h3>
                         <p>On Vancouver Island we have dreamed up an ideal five-day vacation that combines photography, surf and outdoor adventure – shaped by a live-local travel itinerary and with planet conservation at the heart of the experience.</p>
                         <button>View Trip</button>
                     </div>
+                    </a>
                 </div>
 
             </div>
@@ -199,7 +204,7 @@
         <div class="section">
           <div class="section-issues">
             <div class="description">
-              <h2>Latest Issues</h2>
+              <h2>Previous Issues</h2>
             </div>
 
             <div class="issue">
@@ -219,6 +224,9 @@
                   <img src="images/tiny-atlas-cover-fire-2015.jpg" alt="">
                 </a>
             </div>
+            <div class="description description-bottom">
+              <p><a href="#">View all Issues</a></p>
+            </div>
 
           </div>
         </div>
@@ -227,7 +235,7 @@
             <!--- START FOOTER -->
             <footer id="bottom-nav" class="fade">
 
-            	<div id="social-share" style="margin: 1em 0 0 0;position:relative;">
+            	<div id="social-share">
         		  <div id="social-labels">
         				<div id="share-label">SHARE</div>
         				<div id="newsletter-label" style="font-size:0.8em;display:block; float: left; width: 50%; text-align: right;"><span>SUBSCRIBE</span></div>
