added resources btn

--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -71,13 +71,13 @@
           <a href="../index.html"><img src="../images/TAQ-logo.png" alt="" class="logo"></a>
       </div>
       <div class="header-links-container">
-        <span class="header-links"><a href="../index.html">Home</a></span>
-        <span class="header-links list-triangle"><a href="masthead.html">Info</a>
+        <span class="header-links list-triangle"><a href="../index.html">Current Issue</a>
           <ul>
             <li><a href="editors-letter.html">Editor's Letter</a></li>
             <li><a href="masthead.html">Masthead</a></li>
           </ul>
         </span>
+        <span class="header-links"><a href="index.html" class="link-active">About</a></span>
         <span class="header-links list-triangle"><a href="../events/solas/index.html">Events</a>
           <ul>
            <li><a href="../events/solas/index.html">SOLAS</a></li>
@@ -86,7 +86,6 @@
            <li><a href="../events/montauk/index.html">Montauk Show</a></li>
           </ul>
         </span>
-        <span class="header-links"><a href="index.html">About</a></span>
         <span class="header-links"><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders" target="_blank">Shop</a>
         </span>
       </div>
