--- a/new-site/paris/index.html
+++ b/new-site/paris/index.html
@@ -785,6 +785,9 @@
                     <span class="issue">City 2O17</span><br>
                     <span class="feature">Paris</span>
                 </div>
+                <div class="feature-links">
+                  <span id="pageLink"><a href="#page23">Resources</a></span>
+                </div>
             </div>
         </div>
 
@@ -903,6 +906,31 @@
         }
         //------ END UP DOWN ------//
 
+        //------ Resources Linking ------//
+        $('#pageLink').on('click', function() {
+            pageLink();
+        });
+
+        function pageLink(){
+          $("#" + pgPages[pageCount]).velocity({
+              opacity: 0
+          }, {
+              display: "none"
+          }, {
+              duration: 1000
+          }, "easeInOutQuint"); // OUT
+          $("#page23").velocity({
+              opacity: 1
+          }, {
+              display: "block"
+          }, {
+              duration: 1000
+          }, "easeInOutQuint"); // IN
+          pageCount = 22;
+          pageNext = 22;
+        }
+
+
         // TOUCH HANDLERS
         var myElement = document.getElementById('taqPage');
         var mc = new Hammer(myElement);
@@ -921,7 +949,7 @@
 
 
 
-        <!-------------------- THE GOOGLE --------------------->
+        //------------------ THE GOOGLE --------------------//
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-39716054-1']);
         _gaq.push(['_trackPageview']);
