--- a/new-site/tel-aviv/index.html
+++ b/new-site/tel-aviv/index.html
@@ -504,7 +504,7 @@
                                          <div id="pg-interview">
                                          <h2>Resources</h2>
 
-                                         <h4>Eat: </h4>
+                                         <h4>Eat:</h4>
 
                                          <a href="https://www.halutzim3.com/"><h5>HaHlutzim 3</h5></a>
                                          <p>An intimate restaurant by Eytan Vanunu and Naama Szterenlicht.</p>
@@ -576,6 +576,9 @@
                 <div class="title">
                     <span class="issue">City 2O17</span><br>
                     <span class="feature">Tel Aviv</span>
+                </div>
+                <div class="feature-links">
+                  <span id="pageLink"><a href="#page15">Resources</a></span>
                 </div>
             </div>
         </div>
@@ -683,7 +686,32 @@
                 pageCount--;
             }
         }
+
         //------ END UP DOWN ------//
+
+        //------ Resources Linking ------//
+        $('#pageLink').on('click', function() {
+            pageLink();
+        });
+
+        function pageLink(){
+          $("#" + pgPages[pageCount]).velocity({
+              opacity: 0
+          }, {
+              display: "none"
+          }, {
+              duration: 1000
+          }, "easeInOutQuint"); // OUT
+          $("#page15").velocity({
+              opacity: 1
+          }, {
+              display: "block"
+          }, {
+              duration: 1000
+          }, "easeInOutQuint"); // IN
+          pageCount = 14;
+          pageNext = 0;
+        }
 
         // TOUCH HANDLERS
         var myElement = document.getElementById('taqPage');
@@ -703,7 +731,7 @@
 
 
 
-        <!-------------------- THE GOOGLE --------------------->
+        //------------------- THE GOOGLE ---------------------//
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-39716054-1']);
         _gaq.push(['_trackPageview']);
